[package]
name = "websocket_agg_orders"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["native-tls", "connect"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
